[gd_scene load_steps=42 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://blue_outdoor_stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SpectrumDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://cue_emitter.gd" type="Script" id=4]
[ext_resource path="res://assets/skip_exercise.jpg" type="Texture" id=5]
[ext_resource path="res://assets/exit_button.jpg" type="Texture" id=6]
[ext_resource path="res://scripts/DelayedButton.gd" type="Script" id=7]
[ext_resource path="res://spawn_timer.gd" type="Script" id=8]
[ext_resource path="res://scenes/PushupViewport.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/EnergyMeter.tscn" type="PackedScene" id=10]
[ext_resource path="res://TextElement.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/WinnerPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://PointIndicatorOrigin.tscn" type="PackedScene" id=13]
[ext_resource path="res://RetractableMat.tscn" type="PackedScene" id=14]
[ext_resource path="res://CircularGauge.tscn" type="PackedScene" id=15]
[ext_resource path="res://TrophyList.tscn" type="PackedScene" id=16]
[ext_resource path="res://position_sign.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/SafetyFence.tscn" type="PackedScene" id=18]
[ext_resource path="res://HudLayer.tscn" type="PackedScene" id=19]
[ext_resource path="res://scripts/Level.gd" type="Script" id=20]
[ext_resource path="res://Heart_Coin.tscn" type="PackedScene" id=21]
[ext_resource path="res://GrooveDisplay.tscn" type="PackedScene" id=22]
[ext_resource path="res://floor_sign.tscn" type="PackedScene" id=23]
[ext_resource path="res://RunIndicator.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/VoiceInstructor.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/TronCharacter.tscn" type="PackedScene" id=27]
[ext_resource path="res://models/StagePole.tscn" type="PackedScene" id=29]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 2, 5 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 0, 0.054902, 0.65098, 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=4]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_unshaded = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = SubResource( 4 )

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 1.98, 0.2 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 0.980392, 0.976471, 0.992157, 1 )

[sub_resource type="Curve3D" id=8]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.393426, 1.02695, 0.270852, 0, 0, 0, 0, 0, 0, 1.54268, 1.03279, 2.26938, 0, 0, 0, 0, 0, 0, 1.76955, 0.993884, 6.47424, 0, 0, 0, 0, 0, 0, -0.0516853, 1.12288, 8.81755 ),
"tilts": PoolRealArray( 0, 0, 0, 0 )
}

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 4, 2 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 1.93832, 0.0224054, 1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.483049, 0.0311753, 0.230285 )

[sub_resource type="PlaneMesh" id=13]
size = Vector2( 2, 1 )

[sub_resource type="SpatialMaterial" id=14]
flags_unshaded = true
albedo_texture = ExtResource( 6 )

[node name="Main" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0225873, -0.0546217, 0.0125537 )
script = ExtResource( 20 )

[node name="SafePushup" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.12, 0, 2.86102e-08, 0, 0.15, 0, -2.86102e-08, 0, 0.12, -0.00348109, 0.101025, -0.363828 )
font_size = 20

[node name="VoiceInstructor" parent="." instance=ExtResource( 25 )]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 256 )
transparent_bg = true
handle_input_locally = false
msaa = 6
usage = 1
render_target_v_flip = true
render_target_update_mode = 0
gui_disable_input = true

[node name="InfoLayer" parent="Viewport" instance=ExtResource( 19 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.28434, 0, 0, 0, -0.125141, -0.139777, 0, 0.395165, -0.0442646, 0, 3.02811, -4.00822 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.77861, 6.55136e-21, 1.3723e-19, 4.03897e-28, 6.81826, -0.0918891, -2.94945e-20, 0.172952, 3.62266, -0.0650544, 0.244225, -0.37951 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="DurationIndicator" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0143757, 2.262 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="spawn_timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 8 )

[node name="cue_emitter" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )
script = ExtResource( 4 )

[node name="PointIndicatorOrigin" parent="cue_emitter" instance=ExtResource( 13 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.16725, 2.36562, 3.68116 )

[node name="Position3D" type="Position3D" parent="cue_emitter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51152, 0 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="cue_emitter/Position3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.959816, 0 )
aabb = AABB( -1, -0.256859, -1, 2, 0.513717, 2 )

[node name="Path" type="Path" parent="cue_emitter"]
curve = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="SkipExerciseButton" type="StaticBody" parent="."]
transform = Transform( 2.31367e-08, -1, 3.92623e-09, 0, -4.37114e-08, -0.0898216, 0.118828, 1.94707e-07, -7.64464e-16, 1.13944, 1, -0.377945 )
script = ExtResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="SkipExerciseButton"]
transform = Transform( 1, 0, 2.84217e-14, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="SkipExerciseButton"]
transform = Transform( 1, 0, 8.47033e-22, 0, 1, -1.48847e-22, -3.38813e-21, 5.68434e-14, 1, 0, -0.0253993, 0 )
shape = SubResource( 11 )

[node name="target" type="Spatial" parent="."]
transform = Transform( 0.118828, 0, 0, 0, 1, 0, 0, 0, 0.0898216, -0.87, 1, -0.0667922 )

[node name="exit_button" type="StaticBody" parent="target"]
transform = Transform( -8.74228e-08, 1, -8.74228e-09, 0, -4.37114e-08, -0.2, -2, -4.37114e-08, 3.82137e-16, -2.57036, 0.25962, -0.0545118 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="target/exit_button"]
transform = Transform( 1, -3.55271e-15, 5.29396e-23, 0, 1, -3.55271e-15, 6.77626e-21, -4.26326e-14, 1, 0, -0.00640297, 0 )
shape = SubResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="target/exit_button"]
transform = Transform( 0.5, -3.55271e-15, 3.97047e-23, 0, 1, -2.22045e-15, 4.23516e-21, -4.26326e-14, 0.5, 0, 0, 0 )
mesh = SubResource( 13 )
material/0 = SubResource( 14 )

[node name="target_zone_l" parent="target" instance=ExtResource( 29 )]
transform = Transform( 4, 0, 0, 0, 0.4, 0, 0, 0, 4, -3.10597, -0.919663, 0.00937921 )

[node name="target_zone_l2" parent="target" instance=ExtResource( 29 )]
transform = Transform( -4, 0, -1.30337e-06, 0, 0.4, 0, 1.30337e-06, 0, -4, 17.0173, -0.919663, 0.00937921 )

[node name="PositionSign" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -0.5, 0, 1, -2.18557e-08, -1.79988, 0.513339, -4.91669 )
visible = false

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="boxman" parent="." instance=ExtResource( 27 )]
transform = Transform( 0.466673, 0, 0.521743, 0, 0.7, 0, -0.521743, 0, 0.466673, -2.14794, 0.0354877, -5.33982 )

[node name="boxman2" parent="." instance=ExtResource( 27 )]
transform = Transform( 0.65914, 0, -0.235656, 0, 0.7, 0, 0.235656, 0, 0.65914, 2.21215, 0.0354877, -5.29692 )

[node name="FloorSign" parent="." instance=ExtResource( 23 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0908899, -0.0706311 )

[node name="GrooveDisplay" parent="." instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.36304, -4.23735 )

[node name="MainStage" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -0.252361, 0, -4.95283 )

[node name="blue_outdoor_stage" parent="MainStage" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.026268, -0.001, -0.586 )

[node name="mat" parent="MainStage" instance=ExtResource( 14 )]
transform = Transform( 0.19, 0, 0, 0, 0.2, 0, 0, 0, 0.19, 0.0230895, 0.00996999, 0.522808 )

[node name="TrophyList" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.120644, 0, -0.089135, 0, 0.15, 0, 0.089135, 0, 0.120644, -1.86695, 1.38989, -1.42501 )

[node name="RunIndicator" parent="." instance=ExtResource( 24 )]
transform = Transform( 0.117853, 0, 0.161588, 0, 0.2, 0, -0.161588, 0, 0.117853, -1.93559, 2.27291, -1.36809 )

[node name="heart_coin" parent="." instance=ExtResource( 21 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.91774, 3.01999, -3.98032 )
bpm = 60.0

[node name="rungauge" parent="." instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 1.27897, -4.07523 )
visible = false

[node name="SpectrumDisplay" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.2, 0, 0, 0, -0.168573, -0.107625, 0, 0.107625, -0.168573, -2.18058, 3.36426, -11.4019 )

[node name="PushupView" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.313975, -0.77 )

[node name="EnergyMeter" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.88762e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -4.88762e-08, 0.0291024, 0.00458181, -3.26792 )

[node name="WinnerPanel" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.345, -2.94747 )
visible = false

[node name="SafetyFence" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0468838, -2.5273 )
max_allowed_distance = 0.5

[connection signal="timeout" from="spawn_timer" to="spawn_timer" method="_on_spawn_timer_timeout"]
[connection signal="streak_changed" from="cue_emitter" to="." method="_on_cue_emitter_streak_changed"]
[connection signal="camera_entered" from="cue_emitter/Position3D/VisibilityNotifier" to="cue_emitter" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="cue_emitter/Position3D/VisibilityNotifier" to="cue_emitter" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="touched" from="SkipExerciseButton" to="." method="_on_SkipExerciseButton_touched"]
[connection signal="touched" from="target/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="state_change_completed" from="PositionSign" to="." method="_on_PositionSign_state_change_completed"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
[connection signal="beast_attack_successful" from="boxman" to="." method="_on_boxman_beast_attack_successful"]
[connection signal="beast_killed" from="boxman" to="." method="_on_boxman_beast_killed"]
[connection signal="beast_attack_successful" from="boxman2" to="." method="_on_boxman_beast_attack_successful"]
[connection signal="beast_killed" from="boxman2" to="." method="_on_boxman_beast_killed"]
